--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,7 @@ repositories {
 }
 
 dependencies {
-    implementation "net.cjsah.bot:HeyBoxBotConsole:${core_version}"
+    implementation("net.cjsah.bot:HeyBoxBotConsole:${core_version}") {
+        exclude group: 'net.cjsah.bot', module: 'api'
+    }
 }
